--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <div class="menu">
         <button type="button" id="add-row">Add a row</button>
         <select name="color" id="color-select">
-          <option value="">--Select color--</option>
+          <option value="" selected>--Select color--</option>
           <option value="red">Red</option>
           <option value="green">Green</option>
           <option value="beige">Beige</option>
           <option value="blue">Blue</option>
           <option value="gray">Gray</option>
-          <option value="black" selected>Black</option>
+          <option value="black">Black</option>
           <option value="aqua">Aqua</option>
         </select>
       </div>
